[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Entrance.gd" type="Script" id=2]
[ext_resource path="res://Images/Money.png" type="Texture" id=3]
[ext_resource path="res://Sounds/ButtonSound.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Money.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.113725, 0.847059, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Entrance" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" type="Label" parent="."]
margin_left = 35.0
margin_top = 58.0
margin_right = 141.0
margin_bottom = 227.0
custom_styles/normal = SubResource( 1 )

[node name="Tickets" type="Label" parent="Bg"]
margin_right = 107.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Tickets"
align = 1
valign = 1

[node name="Label" type="Label" parent="Bg"]
margin_left = 1.0
margin_top = 15.0
margin_right = 211.0
margin_bottom = 321.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Ticket"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Bg"]
position = Vector2( 100, 8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Bg"]
position = Vector2( 58, 99 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Money" type="Label" parent="Bg"]
margin_left = 88.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "28"

[node name="Cost" type="Label" parent="Bg"]
margin_left = 46.0
margin_top = 96.0
margin_right = 62.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "20"

[node name="TicketBtn" type="Button" parent="Bg"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 40.0
margin_top = 85.0
margin_right = 66.0
margin_bottom = 105.0

[node name="MoneySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="Bg/TicketBtn" to="." method="_on_TicketBtn_mouse_entered"]
[connection signal="mouse_exited" from="Bg/TicketBtn" to="." method="_on_TicketBtn_mouse_exited"]
[connection signal="pressed" from="Bg/TicketBtn" to="." method="_on_TicketBtn_pressed"]
